# personalised-mail-sender

./: .gitignore  CLAUDE (7).md  CLAUDE.md  README.md  render.yaml
agent/: .env.example  pyproject.toml  requirements.txt
agent/app/: __init__.py  config.py  llm.py  main.py  resume.py  schemas.py
agent/app/agents/: __init__.py  orchestrator.py  personalization.py  resume_analyzer.py
agent/tests/: test_endpoints.py  test_llm.py  test_schemas.py
supabase/migrations/: 0001_init.sql
web/: next.config.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx
web/app/(app)/: layout.tsx
web/app/(app)/compose/: page.tsx
web/app/(app)/dashboard/: page.tsx
web/app/api/email/generate/: route.ts
web/app/api/emails/[id]/: route.ts
web/app/api/resume/analyze/: route.ts
web/app/auth/callback/: route.ts
web/app/login/: actions.ts  auth-form.tsx  page.tsx
web/components/: app-nav.tsx  compose-form.tsx  email-editor.tsx  model-picker.tsx  profile-view.tsx  resume-upload.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
web/lib/: agent.ts  models.ts  types.ts
web/lib/supabase/: proxy.ts  server.ts
