[project]
name = "mailer-agent"
version = "0.1.0"
description = "Multi-agent AI service for the Personalized Mass AI Mailer"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
